# vmips-simulator

./: .clippy.toml  .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE_NOTES_v0.2.1.md  ROADMAP.md  SECURITY.md  TODO.md  input.s  rustfmt.toml  test_simple.s
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: INFRASTRUCTURE.md  ci.yml  release.yml
assets/: README.md
benches/: simulator_benchmarks.rs
docs/: README.md  api.md  architecture.md  assembler.md  contributing.md  examples.md  functional-simulator.md  getting-started.md  instruction-set.md  timing-simulator.md  troubleshooting.md  tutorials.md
examples/: array_sum.rs  bubble_sort.rs  dot_product.rs  factorial.rs  fibonacci.rs  matrix_multiply.rs  simple_calculator.rs  string_length.rs
src/: elf_loader.rs  errors.rs  lib.rs  main.rs  main_assembler.rs
src/assembler/: assembler.rs  core.rs  mod.rs
src/functional_simulator/: instructions.rs  loop_detector.rs  memory.rs  mod.rs  pc_manager.rs  register_allocator.rs  registers.rs  simulator.rs
src/timing_simulator/: branch_predictor.rs  components.rs  config.rs  mod.rs  pipeline.rs  simulator.rs  tomasulo.rs  visualization.rs
src/utils/: logger.rs  mod.rs  parser.rs  syscall.rs
tests/: additional_edge_cases.rs  advanced_features.rs  edge_cases.rs  error_handling.rs  functional_simulator.rs  integration_tests.rs  property_tests.proptest-regressions  property_tests.rs  timing_simulator.rs
